# parallelproj

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  codecov.yml  pixi.toml  pyproject.toml
.githooks/: pre-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: test.yml
benchmarks/: 00_pet_sinogram_nontof.py  01_pet_sinogram_tof.py  02_pet_lm_nontof.py  03_pet_lm_tof.py
binder/: environment.yml  postBuild  start
docs/: .gitignore  api.rst  api_data.rst  api_functions.rst  api_operators.rst  api_pet_lors.rst  api_pet_scanners.rst  api_pet_sino_symmetries.rst  api_pet_unlist.rst  api_projectors.rst  api_tof.rst  changelog.rst  conf.py  environment.yml  index.rst  installation.rst  python_api.rst  quickstart.rst  quickstart_minimal.py  refs.bib
docs/examples/: README.txt  array_utils.py  example_utils.py  img.py  vis.py
docs/examples/01_pet_geometry/: 01_run_regular_polygon_pet_scanner.py  02_run_regular_polygon_pet_sino.py  03_run_block_scanner.py  04_run_michelogram_and_compression.py  05_run_zigzag_comparison.py  06_run_sinogram_symmetries.py  07_run_detector_mashing.py  08_run_tof_bin_mashing.py  README.txt
docs/examples/02_pet_sinogram_projections/: 01_run_pet_non_tof_sinogram_projector.py  02_run_pet_tof_sinogram_projector.py  03_run_equalblock_projector.py  04_run_pet_listmode_projector.py  05_run_unlister.py  README.txt
docs/examples/03_algorithms/: 00_run_mlem_osem_svrg.py  01_run_sgd_svrg.py  02_pdhg_dtv.py  02_run_pdhg_dtv.py  02_run_pdhg_spdhg_dtv.py  03_run_fbp.py  04_run_depierro.py  05_run_spdhg_dtv.py  05_run_tof_variance.py  05_tof_vs_nontof.py  06_run_osem_memmap.py  07_run_mlem_negpoissonlogl_modes.py  08_pdhg_dtv.py  08_run_mltr_sps.py  README.txt  utils.py
docs/examples/03_pet_listmode_projections/: 01_run_pet_non_tof_listmode_projector.py  02_run_pet_tof_listmode_projector.py
docs/examples/04_algorithms/: 00_mlem_osem_svrg.py  00_run_mlem_osem_svrg.py  01_run_sgd_svrg.py  01_sgd_svrg.py  02_run_osem_basic.py  03_run_mlem_projection_data.py  04_run_osem_projection_data.py  05_run_fbp.py  06_run_depierro.py  08_pdhg_dtv.py  09_svrg.py  utils.py
docs/examples/04_listmode_algorithms/: 00_run_listmode_mlem_osem_svrg.py  01_listmode_mlem.py  01_run_listmode_mlem.py  01_run_listmode_sgd_svrg.py  02_listmode_osem.py  02_lm_spdhg.py  03_lm_spdhg.py  README.txt
docs/examples/05_algorithms/: 01_run_mlem_basic.py  06_run_depierro.py  07_run_mlem_open_geometry.py  08_pdhg_dtv.py
docs/examples/05_listmode_algorithms/: 01_listmode_mlem.py  02_listmode_osem.py  03_lm_spdhg.py
docs/examples/05_torch/: 01_run_projection_layer.py  README.txt
docs/examples/05_tranmsmission/: 00_mltr_sps.py  00_run_mltr_sps.py  01_os_mltr_svrg.py  02_run_maptr.py  03_mlaa.py
docs/examples/05_transmission/: 00_mltr_sps.py  01_os_mltr_svrg.py  02_run_maptr.py  03_mlaa.py  README.txt
docs/examples/06_joint_estimation/: 00_run_mltr_sps.py  01_run_os_mltr_svrg.py  02_maptr.py  README.txt
docs/examples/06_listmode_algorithms/: 01_listmode_mlem.py  02_listmode_osem.py  03_lm_spdhg.py
docs/examples/06_torch/: 01_run_projection_layer.py  README.txt
docs/examples/07_torch/: 01_run_projection_layer.py
docs/source/: installation.rst  python_api.rst
examples/01_pet_geometry/: 01_run_regular_polygon_pet_scanner.py  02_run_regular_polygon_pet_sino.py  03_run_block_scanner.py
examples/02_pet_sinogram_projections/: 01_run_pet_non_tof_sinogram_projector.py  02_run_pet_tof_sinogram_projector.py  03_run_equalblock_projector.py
examples/03_pet_listmode_projections/: 01_run_pet_non_tof_listmode_projector.py  02_run_pet_tof_listmode_projector.py
examples/05_algorithms/: 01_run_mlem_basic.py  02_run_osem_basic.py  03_run_mlem_projection_data.py  04_run_osem_projection_data.py  05_run_fbp.py  06_run_depierro.py  07_run_mlem_open_geometry.py  08_pdhg_dtv.py  utils.py
examples/06_listmode_algorithms/: 01_listmode_mlem.py  02_listmode_osem.py  03_lm_spdhg.py
examples_wip/: 07_pdhg_spdhg_lmspdhg.py  lm_grad_layer.py
scripts/: release.py
src/parallelproj/: __init__.py  _backend.py  _examples_utils.py  backend.py  data.py  functions.py  operators.py  pet_lors.py  pet_scanners.py  projectors.py  sinogram_symmetries.py  tof.py  unlist.py
tests/: config.py  test_backend.py  test_data.py  test_examples_helpers.py  test_functions.py  test_operators.py  test_pet_lors.py  test_pet_scanners.py  test_polygon_projector.py  test_projectors.py  test_sinogram_symmetries.py  test_tof.py  test_tof_projection.py  test_unlist.py
wip/: axial_block_symmetry.py  dmi.pro  dmi.py  dmi_nema_nontof_mlem.py  dmi_nema_nontof_osem.py  dmi_nema_tof_osem.py  signa.pro  signa.py  signa_tof.pro  signa_tof.py  signa_tof_ob.pro  signa_tof_ob.py  sinogram_plane_symmetries.py  sinogram_symmetries.py  verify_sinogram_symmetries.py
