[build-system]
# pixi-build-python invokes hatchling via PEP 517 to produce the wheel.
# The version is declared statically in [project] below and mirrored by
# [package].version in pixi.toml.
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parallelproj"
# IMPORTANT: this version must be kept in sync with [package].version in
# pixi.toml.  Bumping a release requires editing both files.
version = "2.0.0"
description = "Python tools for PET projection and reconstruction workflows."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
  {name = "Georg Schramm"},
]
# Runtime dependencies are intentionally NOT enumerated here.
#
# ``parallelproj`` is distributed only via conda-forge.  The channels
# that actually install the package have their own dependency declarations:
#
#   * the conda-forge feedstock (recipe/meta.yaml) -> ``conda install``
#   * ``pixi.toml`` (sibling of this file)         -> ``pixi install``
#
# Listing them here would duplicate them and force a "conda-or-PyPI?"
# decision every time they change.  ``parallelproj-core`` (the binary
# backend) is conda-forge-only and listing it here would also break PyPI
# resolution outright.
dependencies = []

# Dev / test / docs / GPU environments are defined in ``pixi.toml`` under
# ``[feature.*]`` and ``[environments]``.

# Tell hatchling that the importable package lives at ``src/parallelproj``.
# Hatchling's auto-discovery handles flat layouts out of the box but
# wants this explicit for the ``src/`` layout we use.
[tool.hatch.build.targets.wheel]
packages = ["src/parallelproj"]

[tool.pytest.ini_options]
testpaths = ["tests"]
